--- a/static/index.html
+++ b/static/index.html
@@ -23,15 +23,16 @@
                 <div class="field">
                         <label class="label is-medium">Change width of output div</label>
                         <div class="control">
-                            <input id="change-width" class="input is-medium range" type="range" value="800" min="200" max="1344">
+                            <input id="change-width" class="input is-medium range" type="range" min="200" max="1344">
                         </div>
                         <p class="help">Write in input field to change text of output area dynamically!</p>
                     </div>
             </form>
             <!-- Output area -->
-            <div id="form-output" class="output-container"></div>
+            <div id="form-output" class="output-container" style="height: 50px"></div>
         </div>
     </main>
+    <script src="../src/textFit.js"></script>
     <script src="../src/index.js"></script>
 </body>
 </html>
